--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ p,h1,h2,h3 {
   margin: 0px;
 }
 
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
 p {
-  font-size: 20px;
+  font-size: 1.2rem;
+  font-weight: bold;
   line-height: 1.3;
 }
 
@@ -38,6 +44,7 @@ p {
   justify-content: center;
 }
 
+
 .menu a {
   background: #ffffff;
   padding: 15px 30px;
@@ -45,6 +52,11 @@ p {
   color: #000000;
   text-transform: uppercase;
 }
+
+.menu a:hover{
+border: 2px solid red;
+}
+
 
 .container {
   max-width: 1000px;
@@ -64,14 +76,16 @@ p {
 
 }
 
-.barrinha {
+.intro::after {
+  content: "";
   width: 60px;
   height: 4px;
-  background: #e21;
+  background-color: #e21;
   position: absolute;
   top: 30px;
   right: -30px;
 }
+
 
 
 .btn-red {
@@ -83,19 +97,20 @@ p {
 }
 
 .btn-red:hover {
-  background-color: red;
+  background-color: #900;
 }
 
 
 
 .sub {
   text-align: end;
-  font-size: 64px;
+  font-size: 3.5rem;
   margin: 150px  20px;
   text-transform: uppercase;
-  color: #c6c6c6;
-  background: #f7f7f7;
+  color: #c6c6c69d;
+  background-image: url(/img/onda.svg);
 }
+
 
 .especificacao {
   background: #fff;
@@ -108,6 +123,16 @@ p {
   gap: 10px 20px;
   padding: 20px;
 }
+
+.vantagem-espec:hover {
+  border-left: 4px  solid red;  
+}
+
+li:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+
 
 .vantagem-espec p {
   grid-column: 2;
