--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
+  background-color: #f7f7f7;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
-  background: #f7f7f7;
   display: grid;
   gap: 60px;
   justify-items: center;
@@ -17,6 +17,12 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
 p,h1,h2,h3 {
   margin: 0px;
 }
@@ -28,13 +34,14 @@ h1 {
 
 p {
   font-size: 1.2rem;
-  font-weight: bold;
   line-height: 1.3;
 }
 
-.logo {
-  display: flex;
-  justify-content: center;
+
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
 }
 
 .menu {
@@ -46,17 +53,18 @@ p {
 
 
 .menu a {
+  display: block;
   background: #ffffff;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
   color: #000000;
   text-transform: uppercase;
+  border: 2px solid #fff;
 }
 
 .menu a:hover{
-border: 2px solid red;
+  border-color:  red;
 }
-
 
 .container {
   max-width: 1000px;
@@ -87,11 +95,10 @@ border: 2px solid red;
 }
 
 
-
 .btn-red {
   background: #e21;
   color: #fff;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
   text-transform: uppercase;
 }
@@ -100,14 +107,13 @@ border: 2px solid red;
   background-color: #900;
 }
 
-
-
 .sub {
-  text-align: end;
+  text-align: right;
   font-size: 3.5rem;
-  margin: 150px  20px;
   text-transform: uppercase;
-  color: #c6c6c69d;
+  padding: 40px;
+  align-self: center;
+  color: rgba(0,0,0,0.2);
   background-image: url(/img/onda.svg);
 }
 
@@ -122,13 +128,14 @@ border: 2px solid red;
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
+  border-left: 4px solid transparent;
 }
 
 .vantagem-espec:hover {
-  border-left: 4px  solid red;  
+  border-color:red;  
 }
 
-li:nth-child(odd) {
+.vantagem-espec:nth-child(odd) {
   background: #f7f7f7;
 }
 
@@ -149,11 +156,7 @@ li:nth-child(odd) {
   background: #fff;
   width: 100%;
   text-align: center;
-  padding: 30px;
-  box-sizing: border-box;
-}
-
-.rodape p {
   padding: 40px;
+  box-sizing: border-box;
 }
 
