atualizando url background-image

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ p {
   padding: 40px;
   align-self: center;
   color: rgba(0,0,0,0.2);
-  background-image: url(/img/onda.svg);
+  background-image: url(img/onda.svg);
 }
 
 
