--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   display: grid;
-  gap: 60px;
+  gap: 3.75rem;
   justify-items: center;
-  margin-top: 60px;
+  margin-top: 3.75rem;
 }
 
 img {
@@ -15,6 +15,7 @@ img {
 
 a {
   text-decoration: none;
+  font-weight: b;
 }
 
 ul {
@@ -33,7 +34,7 @@ h1 {
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   line-height: 1.3;
 }
 
@@ -41,13 +42,13 @@ p {
 .header {
   display: grid;
   justify-items: center;
-  gap: 60px;
+  gap: 3.75rem;
 }
 
 .menu {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 1.25rem;
   justify-content: center;
 }
 
@@ -74,11 +75,11 @@ p {
 
 .intro {
   background: #fff;
-  padding: 40px;
+  padding: 2.5rem;
   text-align: right;
   position: relative;
   display: grid;
-  gap: 20px;
+  gap: 1.25rem;
   align-content: center;
   justify-items: end;
 
@@ -109,9 +110,9 @@ p {
 
 .sub {
   text-align: right;
-  font-size: 3.5rem;
+  font-size: 4rem;
   text-transform: uppercase;
-  padding: 40px;
+  padding: 2.5rem;
   align-self: center;
   color: rgba(0,0,0,0.2);
   background-image: url(img/onda.svg);
@@ -120,14 +121,14 @@ p {
 
 .especificacao {
   background: #fff;
-  padding: 40px;
+  padding: 2.5rem;
 }
 
 .vantagem-espec {
   display: grid;
   grid-template-columns: auto 1fr;
-  gap: 10px 20px;
-  padding: 20px;
+  gap: 0.625rem 1.25rem;
+  padding: 1.25rem;
   border-left: 4px solid transparent;
 }
 
@@ -156,7 +157,7 @@ p {
   background: #fff;
   width: 100%;
   text-align: center;
-  padding: 40px;
+  padding: 2.5rem;
   box-sizing: border-box;
 }
 
