--- a/style.css
+++ b/style.css
@@ -73,6 +73,17 @@ p {
   grid-template-columns: 1fr 1fr;
 }
 
+@media(max-width: 1000px) {
+  .container {
+    grid-template-columns: 1fr;
+    max-width: 600px;
+  }
+  .intro::after {
+    display: none;
+  }
+
+}
+
 .intro {
   background: #fff;
   padding: 2.5rem;
