--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
+:root {
+  --cor-primaria: #e21;
+  --cor-primaria-escura: #900;
+  --fundo: #f7f7f7;
+  --fundo-2: #fff;
+  --texto: #000000;
+  --texto-2: #444;
+  --subtitulo: rgba(0,0,0,0.2);
+  --onda: url(./img/onda-clara.svg);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --fundo: #111111;
+    --fundo-2: #000000;
+    --texto: #fff;
+    --texto-2: #444;
+    --subtitulo: rgba(255, 255, 255, 0.2);
+    --onda: url(./img/onda-escura.svg);
+   }
+}
+
 body {
-  background-color: #f7f7f7;
+  background-color: var(--fundo);
+  color: var(--texto);
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   display: grid;
@@ -11,11 +34,11 @@ body {
 img {
   max-width: 100%;
   display: block;
+  color: var(--subtitulo);
 }
 
 a {
   text-decoration: none;
-  font-weight: b;
 }
 
 ul {
@@ -55,16 +78,16 @@ p {
 
 .menu a {
   display: block;
-  background: #ffffff;
+  background: var(--fundo-2);
   padding: 1rem 2rem;
   border-radius: 4px;
-  color: #000000;
+  color: var(--texto-1);
   text-transform: uppercase;
-  border: 2px solid #fff;
+  border: 2px solid var(--fundo-2);
 }
 
 .menu a:hover{
-  border-color:  red;
+  border-color:  var(--cor-primaria);
 }
 
 .container {
@@ -74,7 +97,8 @@ p {
 }
 
 .intro {
-  background: #fff;
+  background: var(--fundo-2);
+  color: var(--texto);
   padding: 2.5rem;
   text-align: right;
   position: relative;
@@ -89,7 +113,7 @@ p {
   content: "";
   width: 60px;
   height: 4px;
-  background-color: #e21;
+  background-color: var(--cor-primaria);
   position: absolute;
   top: 30px;
   right: -30px;
@@ -101,15 +125,15 @@ p {
 }
 
 .btn-red {
-  background: #e21;
-  color: #fff;
+  background: var(--cor-primaria);
+  color: var(--texto-1);
   padding: 1rem 2rem;
   border-radius: 4px;
   text-transform: uppercase;
 }
 
 .btn-red:hover {
-  background-color: #900;
+  background-color: var(--cor-primaria-escura);
 }
 
 .sub {
@@ -118,13 +142,13 @@ p {
   text-transform: uppercase;
   padding: 2.5rem;
   align-self: center;
-  color: rgba(0,0,0,0.2);
-  background-image: url(img/onda.svg);
+  color: var(--subtitulo);
+  background-image: var(--onda);
 }
 
 
 .vantagens {
-  background: #fff;
+  background: var(--fundo-2);
   padding: 2.5rem;
 }
 
@@ -133,15 +157,15 @@ p {
   grid-template-columns: auto 1fr;
   gap: 0.625rem 1.25rem;
   padding: 1.25rem;
-  border-left: 4px solid transparent;
+  border-left: 4px solid transparent; 
 }
 
 .vantagem-espec:hover {
-  border-color:red;  
+  border-color: var(--cor-primaria);  
 }
 
 .vantagem-espec:nth-child(odd) {
-  background: #f7f7f7;
+  background: var(--fundo);
 }
 
 
@@ -158,7 +182,7 @@ p {
 
 
 .rodape {
-  background: #fff;
+  background: var(--fundo-2);
   width: 100%;
   text-align: center;
   padding: 2.5rem;
